Added hclient as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "hmsv2api"]
 	path = hmsv2api
 	url = https://github.com/akolb1/hmsv2api.git
+[submodule "hclient"]
+	path = hclient
+	url = https://github.com/akolb1/hclient.git
