--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ description: Software Hacker
 footer-links:
   dribbble:
   email: akolb@apache.org
-  facebook:
-  flickr: akolb1
+  facebook: akolb1
+  flickr: akolb
   github: github.com/akolb1
-  instagram:
+  instagram: akolb4
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
